TEST_PROGRAMS/VALID/stefan_knudsen/notFibs.min
# prints all natural numbers that are not fibonacci numbers

var a : int;
var b : int;
var i : int;

a = 0;
b = 1;
while 1 do
i = b;
b = a + b;
a = i;
i = i + 1;
while (b - i) do
print i + ", ";
i = i + 1;
done
done

