TEST_PROGRAMS/INVALID/jonathan_campbell/2.min
var x: int;
x = 0;

while (x=0) do
	print x
done
